--- a/learn_codeAcademy/index.html
+++ b/learn_codeAcademy/index.html
@@ -4,10 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header><h1>JavaScript Events</h1></header>
+
+    <main>
+        <ul id="checklist">
+            <li>
+                <span>Apples</span>
+                <input value="Apples" />
+            </li>
+            <li>
+                <span>Oranges</span>
+                <input value="Oranges" />
+            </li>
+            <li>
+                <span>Bananas</span>
+                <input value="Bananas" />
+            </li>
+        </ul>
+    </main>
+
+    <div>
+        <div class="col-xs-3">
+            <div id="panel1" class="panel panel-primary">
+                <div class="panel-heading">
+                    #panel4
+                </div>
+                <div class="panel-body">Content</div>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div id="panel2" class="panel panel-primary">
+                <div class="panel-heading">
+                    #panel4
+                </div>
+                <div class="panel-body">Content</div>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div id="panel3" class="panel panel-primary">
+                <div class="panel-heading">
+                    #panel4
+                </div>
+                <div class="panel-body">Content</div>
+            </div>
+        </div>
+        <div class="col-xs-3">
+            <div id="panel4" class="panel panel-primary">
+                <div class="panel-heading">
+                    #panel4
+                </div>
+                <div class="panel-body">Content</div>
+            </div>
+        </div>
+    </div>
     
     <script src="jquery-3.4.1.min.js"></script>
+    <script src="events.js"></script>
     <script src="scripts.js"></script>
 </body>
 </html>
