Completed coding challenge 7 in section 5

--- a/JS-Complete-5/index.html
+++ b/JS-Complete-5/index.html
@@ -15,6 +15,7 @@
         <!-- <script src="4-immediately-invoked-function-expressions-IIFE.js"></script> -->
         <!-- <script src="5-closures.js"></script> -->
         <!-- <script src="6-bind-call-and-apply.js"></script> -->
-        <script src="7-coding-challenge-7.js"></script>
+        <!-- <script src="7-coding-challenge-7.js"></script> -->
+        <script src="7-coding-challenge-7b.js"></script>
     </body>
 </html>
