Updates to section 7 ES6

--- a/7-ES6/index.html
+++ b/7-ES6/index.html
@@ -28,6 +28,12 @@
         <div class="box blue">I'm blue!</div>
         <div class="box orange">I'm orange!</div>
         
-        <script src="script.js"></script>
+        <!-- <script src="1-let-const.js"></script> -->
+        <!-- <script src="2-blocks-iifes.js"></script> -->
+        <!-- <script src="3-strings-and-template-literals.js"></script> -->
+        <!-- <script src="4-arrow-functions.js"></script> -->
+        <!-- <script src="5-destructuring.js"></script> -->
+        <!-- <script src="6-arrays-in-es6.js"></script> -->
+        <script src="7-spread-operator.js"></script>
     </body>
 </html>
