Completed section 7 ES6

--- a/7-ES6/index.html
+++ b/7-ES6/index.html
@@ -34,6 +34,13 @@
         <!-- <script src="4-arrow-functions.js"></script> -->
         <!-- <script src="5-destructuring.js"></script> -->
         <!-- <script src="6-arrays-in-es6.js"></script> -->
-        <script src="7-spread-operator.js"></script>
+        <!-- <script src="7-spread-operator.js"></script> -->
+        <!-- <script src="8-rest-parameters.js"></script> -->
+        <!-- <script src="9-default-parameters.js"></script> -->
+        <!-- <script src="10-maps.js"></script> -->
+        <!-- <script src="10-maps-question-simplified.js"></script> -->
+        <!-- <script src="11-classes.js"></script> -->
+        <!-- <script src="12-classes-with-subclasses.js"></script> -->
+        <script src="13-coding-challenge-8.js"></script>
     </body>
 </html>
