--- a/5-advanced-JS/index.html
+++ b/5-advanced-JS/index.html
@@ -16,6 +16,7 @@
         <!-- <script src="5-closures.js"></script> -->
         <!-- <script src="6-bind-call-and-apply.js"></script> -->
         <!-- <script src="7-coding-challenge-7.js"></script> -->
-        <script src="7-coding-challenge-7b.js"></script>
+        <!-- <script src="7-coding-challenge-7b.js"></script> -->
+        <script src="7-coding-challenge-7b-es6.js"></script>
     </body>
 </html>
