--- a/8-asynchronous-JS/asynchronous.html
+++ b/8-asynchronous-JS/asynchronous.html
@@ -9,7 +9,19 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        
+        const second = () => {
+            setTimeout(() => {
+                console.log('Async Hi after 2 seconds');
+            }, 2000);
+        }
+
+        const first = () => {
+            console.log('Hello');
+            second();
+            console.log('The end');
+        }
+
+        first();
     </script>
 </body>
 </html>
