--- a/8-asynchronous-JS/asynchronous.html
+++ b/8-asynchronous-JS/asynchronous.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        const second = () => {
+        /* const second = () => {
             setTimeout(() => {
                 console.log('Async Hi after 2 seconds');
             }, 2000);
@@ -21,7 +21,79 @@
             console.log('The end');
         }
 
-        first();
+        first(); */
+
+        // CALLBACK HELL:
+        /* function getRecipe() {
+            setTimeout(() => {
+                const recipeID = [523, 883, 432, 974];
+                console.log(recipeID);
+
+                setTimeout(id => {
+                    const recipe = {
+                        title: 'Fresh Pasta',
+                        publisher: 'Jonas'
+                    };
+                    console.log(`${id}: ${recipe.title}`);
+
+                    setTimeout(publisher => {
+                        const recipe2 = {
+                            title: 'Italian Pizza',
+                            publisher: 'Jonas'
+                        };
+                        console.log(`Related recipe by ${recipe.publisher}: Recipe ${id}, ${recipe2.title}`);
+                    }, 1500, recipe.publisher);
+                }, 1500, recipeID[2]);
+            }, 1500);
+        }
+        getRecipe(); */
+
+        // PROMISES (instead of callback hell):
+        const getIDs = new Promise((resolve, reject) => {
+            setTimeout(() => {
+                resolve([523, 883, 432, 974]);
+            }, 1500);
+        });
+
+        const getRecipe = recipeID => {
+            return new Promise((resolve, reject) => {
+                setTimeout(id => {
+                    const recipe = {
+                        title: 'Fresh Pasta',
+                        publisher: 'Jonas'
+                    };
+                resolve(`${id}: ${recipe.title}`);  
+                }, 1500, recipeID);    
+            });
+        };
+
+        const getRelated = publisher => {
+            return new Promise((resolve, reject) => {
+                setTimeout(pub => {
+                    const recipe = {
+                        title: 'Italian Pizza',
+                        publisher: 'Jonas'
+                    };
+                    resolve(`${pub}: ${recipe.title}`);
+                }, 1500, publisher);
+            });
+        };
+
+        getIDs.then(IDs => {
+            console.log(IDs);
+            return getRecipe(IDs[2]);
+        })
+        .then(recipe => {
+            console.log(recipe);
+            return getRelated('Jonas');
+        })
+        .then(recipe => {
+            console.log(recipe);
+        })
+        .catch(error => {
+            console.log('Error!');
+        });
+
     </script>
 </body>
 </html>
