--- a/8-asynchronous-JS/asynchronous.html
+++ b/8-asynchronous-JS/asynchronous.html
@@ -23,6 +23,7 @@
 
         first(); */
 
+
         // CALLBACK HELL:
         /* function getRecipe() {
             setTimeout(() => {
@@ -48,8 +49,9 @@
         }
         getRecipe(); */
 
+
         // PROMISES (instead of callback hell):
-        const getIDs = new Promise((resolve, reject) => {
+        /* const getIDs = new Promise((resolve, reject) => {
             setTimeout(() => {
                 resolve([523, 883, 432, 974]);
             }, 1500);
@@ -92,7 +94,61 @@
         })
         .catch(error => {
             console.log('Error!');
+        }); */
+
+
+        // ASYNC/AWAIT (ES8)
+        const getIDs = new Promise((resolve, reject) => {
+            setTimeout(() => {
+                resolve([523, 883, 432, 974]);
+            }, 1500);
         });
+
+        const getRecipe = recipeID => {
+            return new Promise((resolve, reject) => {
+                setTimeout(id => {
+                    const recipe = {
+                        title: 'Fresh Pasta',
+                        publisher: 'Jonas'
+                    };
+                resolve(`${id}: ${recipe.title}`);  
+                }, 1500, recipeID);    
+            });
+        };
+
+        const getRelated = publisher => {
+            return new Promise((resolve, reject) => {
+                setTimeout(pub => {
+                    const recipe = {
+                        title: 'Italian Pizza',
+                        publisher: 'Jonas'
+                    };
+                    resolve(`${pub}: ${recipe.title}`);
+                }, 1500, publisher);
+            });
+        };
+
+        // async function getRecipesAW() {
+        //     const IDs = await getIDs;
+        //     console.log(IDs);
+        //     const recipe = await getRecipe(IDs[2]);
+        //     console.log(recipe);
+        //     const related = await getRelated('Jonas');
+        //     console.log(related);
+        // };
+        // getRecipesAW();
+
+        async function getRecipesAW2() {
+            const IDs = await getIDs;
+            console.log(IDs);
+            const recipe = await getRecipe(IDs[2]);
+            console.log(recipe);
+            const related = await getRelated('Jonas');
+            console.log(related);
+
+            return recipe;
+        };
+        getRecipesAW2().then(result => console.log(`${result} is the best ever!`));
 
     </script>
 </body>
