AJAX calls with Async and Await

--- a/8-asynchronous-JS/asynchronous.html
+++ b/8-asynchronous-JS/asynchronous.html
@@ -10,6 +10,7 @@
     <h1>Asynchronous JavaScript</h1>
 
     <!-- <script src="async-await.js"></script> -->
-    <script src="fetch.js"></script>
+    <!-- <script src="fetch.js"></script> -->
+    <script src="fetch-with-async-await.js"></script>
 </body>
 </html>
