Added Edamam and Spoonacular APIs to resipee app

--- a/9-resipee/src/index.html
+++ b/9-resipee/src/index.html
@@ -430,7 +430,8 @@
 
             <div class="copyright">
                 &copy; by Tobi Forsdyke. Powered by
-                <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
+                <!-- <a href="https://www.edamam.com/" target="_blank" class="link">Edamam</a>. -->
+                <a href="https://spoonacular.com/" target="_blank" class="link">Spoonacular</a>.
             </div>
 
         </div>
