--- a/9-resipee/src/index.html
+++ b/9-resipee/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
+            <img src="img/logo-resipee.png" alt="Logo" class="header__logo">
             <form class="search">
                 <input type="text" class="search__field" placeholder="Search over 1,000,000 recipes...">
                 <button class="btn search__btn">
@@ -429,9 +429,10 @@
             </ul>
 
             <div class="copyright">
-                &copy; by Tobi Forsdyke. Powered by
+                <p>&copy; by Tobi Forsdyke.</p>
+                <p>Powered by
                 <!-- <a href="https://www.edamam.com/" target="_blank" class="link">Edamam</a>. -->
-                <a href="https://spoonacular.com/" target="_blank" class="link">Spoonacular</a>.
+                <a href="https://spoonacular.com/" target="_blank" class="link">Spoonacular</a>.</p>
             </div>
 
         </div>
